tests/unit-fail-compilation/j056b.c
int a = 9;
int x = a;

int main(void){
	return 0;
}

